
Changes in version 0.7.5


Changes in version 0.7.4
- Fixed bug in location osrelease.pl was being run
- Fixed bug where JGeometryXML.cc wouldn't compile without XERCES
- Allow user to force bitness of build using either m32=1 or m64=1
- Added -a, -t, and -b options to janadump. Some modifications
  to JEventLoop, JFactory, and JFactory_base made to allow better
  user control of when GetNrows activates a factory.
- Default for janadump changed to not automatically activate tagged
  factories when printing summary header.
- Add SetExitCode and GetExitCode to JApplication.
- Added examples to scons build tree.
- Fixed bug where DEFTAG: feature only worked if AUTOACTIVATE was used
- Default compiler now c++/cc instead of g++/gcc and optimization on
  by default (as well as all compiler warnings)
- Added support for compiling with ROOT 6
- Made unsigned 64bit event number requirement (and signed 32bit for run)
- Added JANA:RESOURCE_DEFAULT_PATH conf. par.
- Added macros directory with some example ROOT macros

Changes in version 0.7.3
- Fixed issue with EVENTS_TO_SKIP only skipping EVENTS_TO_SKIP-1 events
- Add janaview plugin
- Add support for stdint types like uint32_t in janaroot
- Fixed longstanding bug in jgeomread where attributes specified in the
  middle of the xpath were not displayed
- Made JANA_CALIB_URL and JANA_CALIB_CONTEXT config. parameters
- Make JObject::Get() search for associated objects of associated objects,...
  (added associated_objects unit test to check that it works)
- Added JObject::GetAssociatedDescendants()
- Added JCalibration::GetVariation()
- Add EVENT_SOURCE_TYPE param. to allow user to force source type
- Add --listconfig command line switch
- -PAUTOACTIVATE=all activates all factories automatically
- Add vector versions of GetCalib to JCalibration API to allow access
  to calibration constants while maintaining position order of source
- Add RUNNUMBER configuration parameter that can be used to override