@@ -1,6 +1,7 @@
 
 Changes in version 0.7.5
-
+- Fixed potential big in JEventLoopGetFactory where NULL pointers could
+  be passed to strcmp
 
 Changes in version 0.7.4
 - Fixed bug in location osrelease.pl was being run
